Switch to float based layout to fix svg overflow flexbox problems

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,3 @@
   margin-right: auto;
   max-width: 2000px;
 }
-
-@media (min-width: 1000px) {
-  .app .content {
-    display: flex;
-  }
-
-}
